# lithos

./: .env.example  .gitignore  Cargo.toml  GDD.md  LICENSE  README.md  deny.toml  lefthook.yml  opencode.json
.github/workflows/: ci.yml  release.yml  rust.yml
.opencode/plans/: 2026-05-01-vector-art-sprites.md
.opencode/skills/webapp-testing/scripts/: lithos_smoke_test.py
client/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
client/e2e/: helpers.ts  live-integration.spec.ts  ui-smoke.spec.ts
client/src/: main.ts
client/src/config/: SpriteRegistry.ts
client/src/engine/: index.test.ts  index.ts
client/src/entities/: .gitkeep
client/src/net/: ApiClient.ts  NetworkClient.test.ts  NetworkClient.ts  SupabaseAuthClient.ts  decodeServerMessage.test.ts  decodeServerMessage.ts
client/src/scenes/: AsteroidBaseScene.ts  BootScene.ts  LoginScene.ts  OverworldScene.ts
client/src/systems/: .gitkeep  ParticleManager.ts
client/src/types/: protocol.test.ts  protocol.ts
client/src/ui/: .gitkeep  GameUiManager.ts
crates/lithos-api/: Cargo.toml
crates/lithos-api/src/: main.rs
crates/lithos-protocol/: Cargo.toml
crates/lithos-protocol/benches/: encode_snapshot.rs
crates/lithos-protocol/src/: codec.rs  lib.rs  messages.rs  types.rs
crates/lithos-protocol/tests/: js_client_join_decode.rs  wire_compact_probe.rs  wire_hex_fixtures.rs
crates/lithos-server/: Cargo.toml
crates/lithos-server/src/: auth.rs  connection.rs  game_loop.rs  main.rs  network.rs
crates/lithos-world/: Cargo.toml
crates/lithos-world/src/: components.rs  content_catalog.rs  crafting.rs  economy.rs  lib.rs  resources.rs  simulation.rs  systems.rs  tilemap.rs  world_gen.rs
deploy/: Dockerfile.api  Dockerfile.client  Dockerfile.server  docker-compose.yml
docs/: architecture.md  contributing.md  gdd-alignment-report.md  implementation-progress-2026-05-01.md  playtest-analysis-2026-04-29.md  playtesting.md
docs/adr/: 0001-technology-stack.md
docs/ui-mockups/: crafting.html  hud.html  inventory.html  menu.html
static/: index.html
supabase/: config.toml  seed.sql
supabase/migrations/: 20260501172500_initial_lithos_schema.sql
tools/: bot_runner.js  package-lock.json  package.json
tools/sprite_pipeline/: config.yaml  generate.py  generate_programmatic.py  requirements.txt  validate_padding.py
