[package]
name = "lithos-api"
description = "Central Orchestration API for Lithos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = "0.8"
serde = { workspace = true }
serde_json = "1"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lithos-protocol = { path = "../lithos-protocol" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
rand = "0.8.6"
