[package]
name = "lithos-protocol"
description = "Shared message types and codec for the Lithos game protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
