[package]
name = "lithos-server"
description = "Dedicated Game Server for Lithos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.26"
bytes = "1"
futures-util = "0.3"
serde = { workspace = true }
rmp-serde = { workspace = true }
bevy_ecs = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lithos-protocol = { path = "../lithos-protocol" }
lithos-world = { path = "../lithos-world" }
rand = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
serde_json = "1.0.149"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
base64 = "0.22"
